Bug 1230617 - Editing text in an input field causes actionbar jank, r=snorp